Primeiras Alterações no Template

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="intro-lead-in">Bem-Vindo ao Meu Portfólio</div>
         <div class="intro-heading text-uppercase space">É um prazer tê-lo aqui!</div>
 
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Conheça-me</a>
       </div>
     </div>
   </header>
@@ -71,8 +71,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Services</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">Habilidades</h2>
+          <h3 class="section-subheading text-muted">Conheça as habilidades que desenvolvi ao longo de minha vida acadêmica</h3>
         </div>
       </div>
       <div class="row text-center">
