Fazendo alterações em habilidades e Portfólio

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Habilidades</a>
+            <a class="nav-link js-scroll-trigger" href="#habilidades">Habilidades</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -67,13 +67,13 @@
         <div class="myimage"><img src="./img/me.jpeg" alt="Minha Imagem"></div>
         <div class="intro-lead-in">Douglas Profirio Ferreira</div>
         <div class="intro-heading text-uppercase">Técnico em Informática</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Conheça-me</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#habilidades">Conheça-me</a>
       </div>
     </div>
   </header>
 
   <!-- Habilidades -->
-  <section id="services">
+  <section id="habilidades">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -84,30 +84,52 @@
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-              <img class="habilidades" src="img/habilidades/logohtml.png" alt="logo html, css e java script">
+              <img class="habilidades" src="img/habilidades/logohtml.png" alt="logo html">
           </span>
           <h4 class="service-heading">HTML 5</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
-            quo inventore harum ex magni, dicta impedit.</p>
+          <p class="text-muted">Hipertext Markup Language. Linguagem de marcação utilizada para desenvolvimento de Websites.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-              <img class="habilidades" src="img/habilidades/logocss.png" alt="logo html, css e java script">
+              <img class="habilidades" src="img/habilidades/logocss.png" alt="logo css">
           </span>
           <h4 class="service-heading">CSS 3</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
-            quo inventore harum ex magni, dicta impedit.</p>
+          <p class="text-muted">Cascading Style Sheets. Linguagem de estilização utilizada para o desenvolvimento de Websites.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-              <img class="js" src="img/habilidades/logojavascript.png" alt="logo html, css e java script">
+              <img class="habilidades" src="img/habilidades/logojavascript.png" alt="logo JavaScript">
           </span>
-          <h4 class="service-heading">Java Script</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
-            quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">JavaScript</h4>
+          <p class="text-muted">JavaScript, mais conhecida como JS. Linguagem de Programação de alto nível fracamente tipada.</p>
         </div>
       </div>
     </div>
+    <div class="container">
+        <div class="row text-center">
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+                <img class="habilidades git" src="img/habilidades/githublogo.png" alt="logo github">
+            </span>
+            <h4 class="service-heading">GitHub</h4>
+            <p class="text-muted">GitHub é uma plataforma de hospedagem de código-fonte com controle de versão utilizando comandos Git.</p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+                <img class="habilidades" src="img/habilidades/herokulogo.jpg" alt="logo heroku">
+            </span>
+            <h4 class="service-heading">Heroku</h4>
+            <p class="text-muted">Heroku é uma plataforma em nuvem como um serviço que suporta várias linguagens de programação.</p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+                <img class="habilidades" src="img/habilidades/reactjsnode.png" alt="logo react">
+            </span>
+            <h4 class="service-heading">React</h4>
+            <p class="text-muted">React é uma biblioteca JavaScript de código aberto para criar interfaces de usuário, atualmente mantida pelo facebook.</p>
+          </div>
+        </div>
+      </div>
   </section>
 
   <!-- Portfolio Grid -->
@@ -116,7 +138,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Conheça meus projetos desenvolvidos ao decorrer do curso.</h3>
         </div>
       </div>
       <div class="row">
@@ -127,11 +149,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/subredescalc.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4>SubredesCalculator</h4>
+            <p class="text-muted">Redes.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -523,20 +545,17 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-                  blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia
-                  expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2>Calculadora de Sub-Redes</h2>
+                <p class="item-intro text-muted">Aplicação requerida na disciplina de Redes 2.</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/subredescalc.png" alt="Imagem do projeto de subredes">
+                <p>A partir do estudo de Sub-Redes e de desenvolvimento web, foi possível realizar esse projeto que faz alusão ao cálculo de subredes.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Threads</li>
-                  <li>Category: Illustration</li>
+                  <li>Data: Outubro 2018</li>
+                  <li>Disciplina: Redes de Computadores 2</li>
+                  <li>Categoria: Redes, Desenvolvimento Web.</li>
                 </ul>
-                <button class="btn btn-primary" data-dismiss="modal" type="button">
-                  <i class="fas fa-times"></i>
-                  Close Project</button>
+                <a href="https://subredescalc.herokuapp.com/"><button class="btn btn-primary" type="button">
+                    Conhecer</button></a> 
               </div>
             </div>
           </div>
