--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/subredescalc.png" alt="">
+            <img class="img-fluid" src="img/portfolio/subredescalc.png" alt="SubredesCalculator">
           </a>
           <div class="portfolio-caption">
             <h4>SubredesCalculator</h4>
@@ -163,7 +163,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/energycalculator.png" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Explore</h4>
@@ -578,9 +578,9 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
+                <h2 class="text-uppercase">Energy Calculator</h2>
+                <p class="item-intro text-muted">Aplicação para simulação de valor da conta de energia.</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/energycalculator.png" alt="">
                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
                   blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia
                   expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
