--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">Olá! é um prazer tê-lo aqui! Me chamo Douglas Profirio Ferreira,
+          <p class="large text-muted">Olá! É um prazer tê-lo aqui! Me chamo Douglas Profirio Ferreira,
             acadêmico do Instituto Federal de Educação, Ciência e Tecnologia de Mato Grosso do Sul, Câmpus Nova
             Andradina.
             Curso Técnico em Informática Integrado ao Ensino Médio, desde 2016. Sou apaixonado por matemática.
@@ -510,7 +510,7 @@
                 <!-- Project Details Go Here -->
                 <h2>Calculadora de Sub-Redes</h2>
                 <p class="item-intro text-muted">Aplicação requerida na disciplina de Redes 2.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/subredescalc.png"
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/subredes.jpeg"
                   alt="Imagem do projeto de subredes">
                 <p>A partir do estudo de Sub-Redes e de desenvolvimento web, foi possível realizar esse projeto que faz
                   alusão ao cálculo de subredes.</p>
