Arrumando ícones-Pronto

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img class="habilidades" src="img/habilidades/logohtml.png" alt="logo html">
+            <img class="habilidades space" src="img/habilidades/logohtml.png" alt="logo html">
           </span>
           <h4 class="service-heading">HTML 5</h4>
           <p class="text-muted">Hipertext Markup Language. Linguagem de marcação utilizada para desenvolvimento de
@@ -119,7 +119,7 @@
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img class="habilidades" src="img/habilidades/logocss.png" alt="logo css">
+            <img class="habilidades space" src="img/habilidades/logocss.png" alt="logo css">
           </span>
           <h4 class="service-heading">CSS 3</h4>
           <p class="text-muted">Cascading Style Sheets. Linguagem de estilização utilizada para o desenvolvimento de
@@ -127,7 +127,7 @@
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img class="habilidades" src="img/habilidades/logojavascript.png" alt="logo JavaScript">
+            <img class="habilidades space" src="img/habilidades/logojavascript.png" alt="logo JavaScript">
           </span>
           <h4 class="service-heading">JavaScript</h4>
           <p class="text-muted">JavaScript, mais conhecida como JS. Linguagem de Programação de alto nível fracamente
@@ -139,7 +139,7 @@
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img class="habilidades git" src="img/habilidades/githublogo.png" alt="logo github">
+            <img class="habilidades git space" src="img/habilidades/githublogo.png" alt="logo github">
           </span>
           <h4 class="service-heading">GitHub</h4>
           <p class="text-muted">GitHub é uma plataforma de hospedagem de código-fonte com controle de versão utilizando
@@ -147,7 +147,7 @@
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img class="habilidades" src="img/habilidades/herokulogo.jpg" alt="logo heroku">
+            <img class="habilidades space" src="img/habilidades/herokulogo.jpg" alt="logo heroku">
           </span>
           <h4 class="service-heading">Heroku</h4>
           <p class="text-muted">Heroku é uma plataforma em nuvem como um serviço que suporta várias linguagens de
@@ -155,7 +155,7 @@
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img class="habilidades" src="img/habilidades/reactjsnode.png" alt="logo react">
+            <img class="habilidades space" src="img/habilidades/reactjsnode.png" alt="logo react">
           </span>
           <h4 class="service-heading">React</h4>
           <p class="text-muted">React é uma biblioteca JavaScript de código aberto para criar interfaces de usuário,
@@ -438,7 +438,7 @@
       <div class="row">
         <div class="col-lg-12 text-center contato">
           <h2 class="section-heading text-uppercase">Contate-me</h2>
-          <h3 class="section-subheading text-muted">Me encontre em uma das redes abaixo e me contate, vamos bater um
+          <h3 class="section-subheading text-muted text-finally">Me encontre em uma das redes abaixo e me contate, vamos bater um
             papo!</h3>
         </div>
       </div>
