Alteração na imagem de perfil

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="myimage"><img src="./img/me.jpeg" alt="Minha Imagem"></div>
+        <div class="myimage"><img src="./img/me.jpg" alt="Minha Imagem"></div>
         <div class="intro-lead-in">Douglas Profirio Ferreira</div>
         <div class="intro-heading text-uppercase">Técnico em Informática</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#me">Conheça-me</a>
