Atualização de Portfolio

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         <div class="myimage"><img src="./img/me.jpg" alt="Minha Imagem"></div>
         <div class="intro-lead-in">Douglas Profirio Ferreira</div>
         <div class="intro-heading text-uppercase">Técnico em Informática</div>
+        <div class="font-min">"O sucesso é ir de fracasso em fracasso sem perder entusiasmo."</div>
+        <div class="intro-lead-in-right font-min">Winston Churchill</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#me">Conheça-me</a>
       </div>
     </div>
@@ -76,25 +78,22 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Me.</h2>
+          <h2 class="section-heading text-uppercase">Sobre Mim</h2>
           <h3 class="section-subheading text-muted">Douglas Profirio Ferreira<br>
-            08/10/2001 - 17 anos - Nova Andradina, MS</h3>
+            18 anos - Nova Andradina, MS</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">Olá! É um prazer tê-lo aqui! Me chamo Douglas Profirio Ferreira,
-            acadêmico do Instituto Federal de Educação, Ciência e Tecnologia de Mato Grosso do Sul, Câmpus Nova
-            Andradina.
-            Curso Técnico em Informática Integrado ao Ensino Médio, desde 2016. Sou apaixonado por matemática.
-            Sou atual membro da Equipe de Suporte N1 de Nova Andradina do Sistema de Gestão Educacional i-Educar. A
-            caminho da formatura
-            desenvolvo uma Plataforma Web para Ensino do Gênero Relatório no Ensino Médio, e espero para o futuro ser um
-            bom técnico e um
-            bom docente em Matemática.</p>
+          <p class="large text-muted text-apresentation">Técnico em Informática, formado pelo Instituto Federal de Educação, Ciência e Tecnologia de Mato Grosso do Sul, Câmpus Nova
+            Andradina. Apaixonado por Matemática e intermediário em Programação, busca sempre estar atualizado com as tecnologias ais utilizadas no mercado.
+            Atual membro da Equipe de Suporte N1 de Nova Andradina do Sistema de Gestão Educacional i-Educar, 
+            que gerência as Escolas da Rede Municipal de Nova Andradina. 
+            Tem como Trabalho de Conclusão de Curso uma Plaforma para Auxiliar a Produção de Relatórios Científicos. 
+            Dedicação, responsabilidade e detalhismo são aspectos muito importantes de sua personalidade.</p>
             <a href="http://lattes.cnpq.br/3379170324409952"><button class="btn btn-primary botao"
               type="button">
-              Ver Curriculo</button></a>
+              Curriculo Lattes</button></a>
       </div>
     </div>
   </section>
