--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Me. Portfólio</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Portfólio</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -41,13 +41,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#me">Sobre Mim</a>
+            <a class="nav-link js-scroll-trigger" href="#me">Me.</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#habilidades">Habilidades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Produções</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
@@ -78,7 +78,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Sobre Mim</h2>
+          <h2 class="section-heading text-uppercase">Me.</h2>
           <h3 class="section-subheading text-muted">Douglas Profirio Ferreira<br>
             18 anos - Nova Andradina, MS</h3>
         </div>
