--- a/index.html
+++ b/index.html
@@ -290,8 +290,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Sobre</h2>
-          <h3 class="section-subheading text-muted">Conheça a minha trajetória acadêmica e minhas experiências
-            profissionais.</h3>
+          <h3 class="section-subheading text-muted">Trajetória Acadêmica e Experiências Profissionais.</h3>
         </div>
       </div>
       <div class="row">
@@ -308,7 +307,7 @@
                   <h4 class="subheading">Ensino Fundamental I</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Cursei o Ensino Fundamental I (do 1° ao 5° ano) na Escola Municipal Brincando de
+                  <p class="text-muted">Ensino Fundamental I (do 1° ao 5° ano) na Escola Municipal Brincando de
                     Aprender - Pólo, dos 6 aos 10 anos, em Nova Andradina - MS.
                   </p>
                 </div>
@@ -324,7 +323,7 @@
                   <h4 class="subheading">Ensino Fundamental II</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Cursei o Ensino Fundamental II (do 6° ao 9° ano) na Escola Municipal Professora
+                  <p class="text-muted">Ensino Fundamental II (do 6° ao 9° ano) na Escola Municipal Professora
                     Efantina de Quadros, dos 11 aos 14 anos, em Nova Andradina - MS.</p>
                 </div>
               </div>
@@ -357,8 +356,8 @@
                   <h4 class="subheading">Ensino Médio</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Aos 14 anos iniciei o Ensino Médio no Instituto Federal de Educação,
-                    Ciência e Tecnologia de Mato Grosso do Sul - Câmpus Nova Andradina, no Curso de Técnico em
+                  <p class="text-muted">Ensino Médio no Instituto Federal de Educação,
+                    Ciência e Tecnologia de Mato Grosso do Sul - Câmpus Nova Andradina. Curso de Técnico em
                     Informática Integrado eo Ensino Médio.
                   </p>
                 </div>
@@ -399,7 +398,7 @@
                 <div class="timeline-body">
                   <p class="text-muted"> Projeto: Ações de Apoio à Inclusão Digital e Desenvolvimento de Soluções
                     Interativas,
-                    onde é realizado o atendimento de suporte às secretárias de escolas do município de Nova Andradina.
+                    onde é realizado o atendimento de suporte à Rede Municipal de Ensino de Nova Andradina.
                     <br>
                     Carga Horaria: 8 horas/semanais.
                   </p>
@@ -458,10 +457,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center contato">
-          <h2 class="section-heading text-uppercase">Contate-me</h2>
-          <h3 class="section-subheading text-muted text-finally">Me encontre em uma das redes abaixo e me contate, vamos
-            bater um
-            papo!</h3>
+          <h2 class="section-heading text-uppercase">Contatos</h2>
+          <h3 class="section-subheading text-muted text-finally">Entre em contato em uma das redes abaixo e saiba ainda mais!</h3>
         </div>
       </div>
     </div>
@@ -514,19 +511,19 @@
     </div>
   </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Contact form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+  <!-- Contact form JavaScript -->
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
 
-    <!-- Custom scripts for this template -->
-    <script src="js/agency.min.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="js/agency.min.js"></script>
 
 </body>
 
