Corrigindo erro da extensão da imagem

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <p>Conhecer</p>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/subredescalc.png" alt="Calculadora de IP's">
+            <img class="img-fluid" src="img/portfolio/subredes.png" alt="Calculadora de SubRedes">
           </a>
           <div class="portfolio-caption">
             <h4>SubRedes Calculator</h4>
