--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center contato">
-          <h2 class="section-heading text-uppercase">Contatos</h2>
+          <h2 class="section-heading text-uppercase">Contato</h2>
           <h3 class="section-subheading text-muted text-finally">Entre em contato em uma das redes abaixo e saiba ainda mais!</h3>
         </div>
       </div>
