Atualizando erros de escrita

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <p class="large text-muted text-muted-justify">
             Formado em Técnico em Informática pelo Instituto Federal de Educação, Ciência e Tecnologia de Mato Grosso do
             Sul,
-            Campus NovaAndradina.
+            Campus Nova Andradina.
             Apaixonado por Matemática e intermediário em Programação, buscando estar a par das tecnologias mais usadas
             no mercado.
             Atual membro da Equipe de Suporte N1 de Nova Andradina do Sistema de Gestão Educacional i-Educar.
@@ -110,7 +110,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Habilidades</h2>
           <h3 class="section-subheading text-muted">Aqui se apresentam as qualidades obtidas ao decorrer da vida
-            acadêmica..</h3>
+            acadêmica.</h3>
         </div>
       </div>
       <div class="row text-center">
@@ -118,19 +118,19 @@
           <span class="fa-stack fa-4x">
             <img class="habilidades space" src="img/habilidades/logohtml.png" alt="logo html">
           </span>
-          <p class="text-muted font-minor">Hipertext Markup Language.<br> Nível de domínio: 70%.</p>
+          <p class="text-muted font-minor"><b>Hipertext Markup Language.</b><br> Nível de domínio: 70%.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <img class="habilidades space" src="img/habilidades/logocss.png" alt="logo css">
           </span>
-          <p class="text-muted font-minor">Cascading Style Sheets. <br> Nível de Domínio: 70%.</p>
+          <p class="text-muted font-minor"><b>Cascading Style Sheets.</b> <br> Nível de Domínio: 70%.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <img class="habilidades space" src="img/habilidades/logojavascript.png" alt="logo JavaScript">
           </span>
-          <p class="text-muted font-minor">JavaScript. <br> Nível de Domínio: 55%.</p>
+          <p class="text-muted font-minor"><b>JavaScript.</b> <br> Nível de Domínio: 55%.</p>
         </div>
       </div>
     </div>
@@ -140,19 +140,19 @@
           <span class="fa-stack fa-4x">
             <img class="habilidades git space" src="img/habilidades/githublogo.png" alt="logo github">
           </span>
-          <p class="text-muted font-minor">GitHub. <br> Nível de Domínio: 40%.</p>
+          <p class="text-muted font-minor"><b>GitHub.</b> <br> Nível de Domínio: 40%.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <img class="habilidades space" src="img/habilidades/herokulogo.jpg" alt="logo heroku">
           </span>
-          <p class="text-muted font-minor">Heroku. <br> Nível de Domínio: 30%.</p>
+          <p class="text-muted font-minor"><b>Heroku.</b> <br> Nível de Domínio: 30%.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <img class="habilidades space" src="img/habilidades/reactjsnode.png" alt="logo react">
           </span>
-          <p class="text-muted font-minor">ReactJS. <br> Nível de Domínio: 60%.</p>
+          <p class="text-muted font-minor"><b>ReactJS.</b> <br> Nível de Domínio: 60%.</p>
         </div>
       </div>
     </div>
@@ -162,19 +162,19 @@
           <span class="fa-stack fa-4x">
             <img class="habilidades git space" src="img/habilidades/nodejs.png" alt="logo github">
           </span>
-          <p class="text-muted font-minor">NodeJS. <br> Nível de Domínio: 40%.</p>
+          <p class="text-muted font-minor"><b>NodeJS.</b> <br> Nível de Domínio: 40%.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <img class="habilidades space" src="img/habilidades/native.png" alt="logo heroku">
           </span>
-          <p class="text-muted font-minor">React Native. <br> Nível de Domínio: 40%.<p>
+          <p class="text-muted font-minor"><b>React Native.</b> <br> Nível de Domínio: 40%.<p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <img class="habilidades space" src="img/habilidades/java.png" alt="logo react">
           </span>
-          <p class="text-muted font-minor">Java. <br> Nível de Domínio: 50%.</p>
+          <p class="text-muted font-minor"><b>Java.</b> <br> Nível de Domínio: 50%.</p>
         </div>
       </div>
     </div>
@@ -458,7 +458,8 @@
       <div class="row">
         <div class="col-lg-12 text-center contato">
           <h2 class="section-heading text-uppercase">Contato</h2>
-          <h3 class="section-subheading text-muted text-finally">Entre em contato em uma das redes abaixo e saiba ainda mais!</h3>
+          <h3 class="section-subheading text-muted text-finally">Entre em contato em uma das redes abaixo e saiba ainda
+            mais!</h3>
         </div>
       </div>
     </div>
